--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html" class="active">About</a></li>
+                <li><a href="info.html">Info</a></li>
             </ul>
         </div>
         <div id="aboutIntro" class="outerBox">
