--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
                 <li><a href="contact.html" class="active">Contact Us</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="info.html">Info</a></li>
+
             </ul>
         </div>
         <div id="contact" class="outerBox">
