--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="menu.html">Menu</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="info.html">Info</a></li>
         </ul>
        </div>
        <div id="intro" class="outerBox">
