--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="menu.html" class="active">Menu</a></li>
                 <li><a href="about.html">About</a></li>
+                <li><a href="info.html">Info</a></li>
             </ul>
        </div>
        <div id="menuIntro" class="outerBox">
