--- a/info.html
+++ b/info.html
@@ -12,6 +12,10 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="info.html">Info</a></li>
             </ul>
-           </div>
+        </div>
+        <div class="outerBox">
+            <h1>Info Page</h1>
+            <p>this is my info page</p>
+        </div>
     </body>
 </html>
